# wallet-sdk-cpp

./: CMakeLists.txt  README.md
cmake/: cmake_uninstall.cmake.in
src/walletsdkcpp/: client.cpp  client.h  types.h
